--- a/INF8808/src/app/app.component.html
+++ b/INF8808/src/app/app.component.html
@@ -1,4 +1,4 @@
 <header>
   <h1>Angular + D3</h1>
 </header>
-<app-area-chart></app-area-chart>
+<app-area-chart-container></app-area-chart-container>
