finished chart (manque tooltip)

--- a/INF8808/src/app/area-chart/area-chart.component.html
+++ b/INF8808/src/app/area-chart/area-chart.component.html
@@ -1,2 +1,4 @@
-<figure [id]="'area-' + this.id"></figure>
-<p>{{ this.sector }}</p>
+<div class="container">
+  <figure [id]="'area-' + this.id"></figure>
+  <p class="sector">{{ shortenSectorName() }}</p>
+</div>
