start of line chart

--- a/INF8808/src/app/app.component.html
+++ b/INF8808/src/app/app.component.html
@@ -303,8 +303,8 @@
 </style>
 
 <!-- Toolbar -->
-<div>
-  <app-waffle-chart></app-waffle-chart>
+<div style="width: 100vw; height: 100vh;">
+  <app-line-chart></app-line-chart>
 </div>
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 <!-- * * * * * * * * * * * The content above * * * * * * * * * * * -->
