--- a/INF8808/src/app/area-chart-container/area-chart-container.component.html
+++ b/INF8808/src/app/area-chart-container/area-chart-container.component.html
@@ -5,16 +5,20 @@
       <div></div>
     </div>
     <div class="container">
-      <app-area-chart
+      <span
+        #chart
         *ngFor="
           let datapoint of this.groupByCategory(colors.DECREASING);
           let index = index
         "
-        [data]="datapoint.data"
-        [sector]="datapoint.SECTEUR_SCIAN"
-        [color]="colors.DECREASING"
-        [id]="index"
-      ></app-area-chart>
+      >
+        <app-area-chart
+          [data]="datapoint.data"
+          [sector]="datapoint.SECTEUR_SCIAN"
+          [color]="colors.DECREASING"
+          [id]="index"
+        ></app-area-chart>
+      </span>
     </div>
   </div>
 
@@ -24,16 +28,20 @@
       <div></div>
     </div>
     <div class="container">
-      <app-area-chart
+      <span
+        #chart
         *ngFor="
           let datapoint of this.groupByCategory(colors.STABLE);
           let index = index
         "
-        [data]="datapoint.data"
-        [sector]="datapoint.SECTEUR_SCIAN"
-        [color]="colors.STABLE"
-        [id]="index + 100"
-      ></app-area-chart>
+      >
+        <app-area-chart
+          [data]="datapoint.data"
+          [sector]="datapoint.SECTEUR_SCIAN"
+          [color]="colors.STABLE"
+          [id]="index + 100"
+        ></app-area-chart>
+      </span>
     </div>
   </div>
 
@@ -43,16 +51,20 @@
       <div></div>
     </div>
     <div class="container">
-      <app-area-chart
+      <span
+        #chart
         *ngFor="
           let datapoint of this.groupByCategory(colors.INCREASING);
           let index = index
         "
-        [data]="datapoint.data"
-        [sector]="datapoint.SECTEUR_SCIAN"
-        [id]="index + 1000"
-        [color]="colors.INCREASING"
-      ></app-area-chart>
+      >
+        <app-area-chart
+          [data]="datapoint.data"
+          [sector]="datapoint.SECTEUR_SCIAN"
+          [id]="index + 1000"
+          [color]="colors.INCREASING"
+        ></app-area-chart>
+      </span>
     </div>
   </div>
 </div>
