--- a/INF8808/src/app/line-chart/line-chart.component.html
+++ b/INF8808/src/app/line-chart/line-chart.component.html
@@ -1,3 +1,8 @@
 <div id="line-chart-container">
-    <figure id="line"></figure>
+    <div id="line-chart-div">
+        <div id="line-chart">
+            <figure id="line"></figure>
+        </div>
+        <figure id="legend-line-chart"></figure>
+    </div>
 </div>
