Change to sizing and ui of waffle

--- a/INF8808/src/app/app.component.html
+++ b/INF8808/src/app/app.component.html
@@ -303,7 +303,7 @@
 </style>
 
 <!-- Toolbar -->
-<div>
+<div style="height: 90vh">
   <app-waffle-chart></app-waffle-chart>
 </div>
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
