--- a/INF8808/src/app/waffle-chart/waffle-chart.component.html
+++ b/INF8808/src/app/waffle-chart/waffle-chart.component.html
@@ -1,1 +1,5 @@
-<figure id="waffle"></figure>
+<div id="container-waffle-chart">
+    <div id="div-waffle-chart">
+        <figure id="waffle"></figure>
+    </div>
+</div>
