--- a/INF8808/src/app/waffle-chart/waffle-chart.component.scss
+++ b/INF8808/src/app/waffle-chart/waffle-chart.component.scss
@@ -1,3 +1,16 @@
 figure#waffle {
     margin: 0;
   }
+
+#container-waffle-chart {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+#div-waffle-chart {
+  width: 75%;
+  height: 75%;
+}
