Start of modifications to have one svg for each waffle chart

--- a/INF8808/src/app/app.component.html
+++ b/INF8808/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div style="height: 90vh">
-  <app-waffle-chart></app-waffle-chart>
+  <app-waffle-chart-container></app-waffle-chart-container>
 </div>
 
 <router-outlet></router-outlet>
