--- a/INF8808/src/app/waffle-chart/waffle-chart.component.html
+++ b/INF8808/src/app/waffle-chart/waffle-chart.component.html
@@ -1,5 +1,3 @@
-<div id="container-waffle-chart">
-    <div id="div-waffle-chart">
-        <figure id="waffle"></figure>
-    </div>
+<div class="container">
+    <figure class="waffle-figure" [attr.id]="this.groupAgeId"></figure>
 </div>
