--- a/INF8808/src/app/waffle-chart/waffle-chart.component.scss
+++ b/INF8808/src/app/waffle-chart/waffle-chart.component.scss
@@ -1,16 +1,10 @@
-figure#waffle {
-    margin: 0;
-  }
-
-#container-waffle-chart {
+.waffle-figure {
   width: 100%;
   height: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  margin: 0;
 }
 
-#div-waffle-chart {
-  width: 75%;
-  height: 75%;
+.container {
+  width: 100%;
+  height: 100%;
 }
