Added visual changes to connected plot

--- a/INF8808/src/app/connected-plot/connected-plot.component.html
+++ b/INF8808/src/app/connected-plot/connected-plot.component.html
@@ -1,1 +1,7 @@
-<figure id="connectedPlot"></figure>
+<div id="connect-plot-container">
+  <div id="connected-plot-div">
+    <div id="connected-plot">
+      <figure id="connectedPlot"></figure>
+    </div>
+  </div>
+</div>
