--- a/INF8808/src/app/app.component.html
+++ b/INF8808/src/app/app.component.html
@@ -6,3 +6,4 @@
 <app-area-chart-container></app-area-chart-container>
 <app-line-chart></app-line-chart>
 <app-waffle-chart-container></app-waffle-chart-container>
+<app-connected-plot></app-connected-plot>
