--- a/INF8808/src/app/area-chart-container/area-chart-container.component.scss
+++ b/INF8808/src/app/area-chart-container/area-chart-container.component.scss
@@ -11,7 +11,7 @@
 }
 
 .baisse {
-  color: #14b8a6;
+  color: #674ffa;
   position: relative;
 }
 
@@ -26,7 +26,7 @@
 }
 
 .baisse .title div {
-  background-color: #14b8a6;
+  background-color: #674ffa;
 }
 
 .stable .title div {
