--- a/INF8808/src/app/waffle-chart-container/waffle-chart-container.component.scss
+++ b/INF8808/src/app/waffle-chart-container/waffle-chart-container.component.scss
@@ -21,8 +21,8 @@ figure.waffle {
 
 #waffle-legend {
   font-size: 18px;
-  color: #00408b;
+  color: #674ffa;
   width: 100%;
-  text-align: center;
+  text-align: left;
   grid-column: 1 / 8;
 }
