--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,21 @@
 <router-outlet></router-outlet>
 <div class="container">
   <h1>Portrait des lésions professionnelles au Québec (2016-2022)</h1>
+  <p>
+    Pour en arriver à une porte d'entrée unique, le gouvernement du Québec a
+    créé la Commission des normes, de l'équité, de la santé et de la sécurité du
+    travail (CNESST) en 2016. Sa création concentre les compétences des trois
+    anciens organismes en matière de travail. La CNESST est chargée de
+    promouvoir les droits et les obligations en matière de travail et en assurer
+    le respect auprès des travailleurs et des employeurs québécois. Ses tâches
+    principales comprennent la prévention, l'inspection et l'indemnisation des
+    lésions professionnelles, ainsi que la construction et le maintien d'un
+    fonds destiné à l'indemnisation. Elle recueille des informations générales
+    sur la personne blessée et les caractéristiques des lésions suite à la
+    réception d'une réclamation. Dans ce projet, nous porterons notre attention
+    sur les données de lésions professionnelles indemnisées pour la période
+    2016-2022.
+  </p>
   <h2>1. Selon le secteur d'activité</h2>
   <div class="viz">
     <app-area-chart-container></app-area-chart-container>
@@ -18,9 +33,10 @@
     <app-viz2></app-viz2>
   </div>
   <p>
-    Le dos est le siège le plus fréquemment atteint chez les travailleurs.
-    Suivent, dans l'ordre : systèmes corporels, oreille(s), doigt(s),ongle(s) et
-    jambe(s).
+    Le système corporel (c'est-à-dire l'ensemble d'un système, sans qu'il y ait
+    de blessure à une partie spécifique du corps) est le siège le plus
+    fréquemment atteint chez les travailleurs. Suivent, dans l'ordre : dos,
+    oreille(s), doigt(s) et ongle(s), et jambe(s).
   </p>
   <h2>3. Selon le groupe d'âge</h2>
 
