--- a/src/styles.scss
+++ b/src/styles.scss
@@ -26,3 +26,19 @@
 * {
   font-family: Arial, Helvetica, sans-serif;
 }
+
+html {
+  background-color: #faf9ff;
+  scroll-behavior: smooth;
+}
+
+body {
+  padding: 0;
+  margin: 0;
+}
+
+*,
+*::after,
+*::before {
+  box-sizing: border-box;
+}
