site un peu plus beau

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -42,7 +42,7 @@
   </div>
 </div>
 <div class="container">
-  <h2 id="contexte">Contexte</h2>
+  <h2 id="contexte">Qu'est ce que la CNESST ?</h2>
   <p>
     Pour en arriver à une porte d'entrée unique, le gouvernement du Québec a
     créé la Commission des normes, de l'équité, de la santé et de la sécurité du
@@ -59,7 +59,7 @@
     2016-2022.
   </p>
 
-  <h2>1. Selon le secteur d'activité</h2>
+  <h2>Quels domaines professionnels subissent une tendance à la hausse ?</h2>
   <div class="viz">
     <app-area-chart-container></app-area-chart-container>
   </div>
@@ -70,7 +70,7 @@
     construction suivent de loin, avec environ 50% d'augmentation du nombre de
     lésions professionnelles.
   </p>
-  <h2>2. Selon le siège de la lésion</h2>
+  <h2>Quel siège du corps est le plus touché ?</h2>
   <div class="viz">
     <app-viz2></app-viz2>
   </div>
@@ -80,7 +80,7 @@
     fréquemment atteint chez les travailleurs. Suivent, dans l'ordre : dos,
     oreille(s), doigt(s) et ongle(s), et jambe(s).
   </p>
-  <h2>3. Selon le groupe d'âge</h2>
+  <h2>Quel groupe d'âge est le plus affecté ?</h2>
 
   <div class="viz">
     <app-waffle-chart-container></app-waffle-chart-container>
@@ -93,7 +93,7 @@
     travailleurs âgés.
   </p>
 
-  <h2>4. Selon le sexe</h2>
+  <h2>Quelle est la répartition entre hommes et femmes?</h2>
   <div class="viz">
     <app-connected-plot></app-connected-plot>
   </div>
@@ -106,7 +106,10 @@
     les femmes.
   </p>
 
-  <h2>5. Selon la nature de lésion, ou le genre d'accident</h2>
+  <h2>
+    Quels genres d'accidents et quelles natures de la lésion sont les plus
+    fréquents?
+  </h2>
   <div class="viz">
     <app-bubble-bar-chart></app-bubble-bar-chart>
   </div>
@@ -136,7 +139,10 @@
     Ces genres d'accidents englobent environ 67 % de l'ensemble des lésions.
   </p>
 
-  <h2>7. Évolution des lésions liées aux risques prédominants</h2>
+  <h2>
+    Est-ce que la mise en place d'actions diminue le nombre de lésions liées aux
+    risques prédominants ?
+  </h2>
   <div class="viz">
     <app-line-chart></app-line-chart>
   </div>
