--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,7 +3,7 @@
 .tooltip-area {
   text-align: center;
   font-size: 0.75rem;
-  color: black;
+  color: #070032;
   width: 100px;
   background-color: white;
   padding: 0.5rem 0.25rem;
@@ -28,7 +28,7 @@
 }
 
 html {
-  background-color: #faf9ff;
+  background-color: #e6efff;
   scroll-behavior: smooth;
 }
 
