--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -3,8 +3,14 @@
   margin: auto;
 }
 
+.container p {
+  color: #070032;
+}
+
 h2 {
-  margin-top: 3rem;
+  padding-top: 3rem;
+  text-align: center;
+  color: #070032;
 }
 
 .viz {
