--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -59,6 +59,21 @@
     2016-2022.
   </p>
 
+  <h1>Profil d'un travailleur à risque</h1>
+  <p>
+    Lors de notre analyse, nous avons déterminé qu'il est important pour la
+    CNESST de déterminer quels groupes de travailleurs sont plus à risque de
+    blessures au travail. Ceci permettra à la CNESST de plus encadrer et
+    informer ces travailleurs et ainsi diminuer le risque de blessure. Pour
+    déterminer quels groupes de travailleurs sont plus à risque, nous allons
+    donc analyser certaines informations des données pouvant nous aider à
+    déterminer le profil d'un travailleur à risque. Premièrement, nous allons
+    déterminer quels domaines professionnels subissent une tendance à la hausse.
+    Ensuite, nous allons déterminer quel siège du corps est le plus touché. Par
+    la suite, nous allons déterminer quel groupe d'âge est le plus affecté.
+    Enfin, nous allons déterminer la répartition entre hommes et femmes.
+  </p>
+
   <h2>Quels domaines professionnels subissent une tendance à la hausse ?</h2>
   <div class="viz">
     <app-area-chart-container></app-area-chart-container>
@@ -106,6 +121,19 @@
     les femmes.
   </p>
 
+  <h1>Accidents et blessures les plus fréquents</h1>
+  <p>
+    Ensuite, nous avons déterminé qu'il serait utile pour la CNESST de savoir
+    quels accidents et quelles blessures sont les plus fréquents au travail.
+    Ceci permettra à la CNESST de mieux cibler les actions de prévention à
+    mettre en place pour diminuer le nombre de lésions professionnelles. Pour
+    effectuer cette analyse, nous allons donc analyser certaines informations
+    des données pouvant nous aider à déterminer quels accidents et quelles
+    blessures sont les plus fréquents. Premièrement, nous allons déterminer
+    quels genres d'accidents sont les plus fréquents. Finalement, nous allons
+    déterminer quelles natures de la lésion sont les plus fréquentes.
+  </p>
+
   <h2>
     Quels genres d'accidents et quelles natures de la lésion sont les plus
     fréquents?
@@ -137,6 +165,18 @@
   </ul>
   <p>
     Ces genres d'accidents englobent environ 67 % de l'ensemble des lésions.
+  </p>
+
+  <h1>Impact des actions de prévention</h1>
+  <p>
+    Enfin, nous avons déterminé qu'il serait utile pour la CNESST de savoir si
+    la mise en place d'actions de prévention diminue le nombre de lésions
+    professionnelles. Ceci permettra à la CNESST de déterminer si
+    l'établissement de priorités en 2019, ainsi que la concentration qui a
+    suivi, ont été efficaces pour réduire le nombre de lésions professionnelles.
+    Pour effectuer cette analyse, nous allons examiner le nombre de lésions
+    liées aux risques prédominants avant et après l'établissement des priorités
+    de la CNESST.
   </p>
 
   <h2>
