Update context texts

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -68,9 +68,8 @@
     déterminer quels groupes de travailleurs sont plus à risque, nous allons
     donc analyser certaines informations des données pouvant nous aider à
     déterminer le profil d'un travailleur à risque. Premièrement, nous allons
-    déterminer quels domaines professionnels subissent une tendance à la hausse.
-    Ensuite, nous allons déterminer quel siège du corps est le plus touché. Par
-    la suite, nous allons déterminer quel groupe d'âge est le plus affecté.
+    déterminer quels domaines professionnels subissent une tendance à la hausse. 
+    Par la suite, nous allons déterminer quel groupe d'âge est le plus affecté.
     Enfin, nous allons déterminer la répartition entre hommes et femmes.
   </p>
 
@@ -120,7 +119,8 @@
     mettre en place pour diminuer le nombre de lésions professionnelles. Pour
     effectuer cette analyse, nous allons donc analyser certaines informations
     des données pouvant nous aider à déterminer quels accidents et quelles
-    blessures sont les plus fréquents. Premièrement, nous allons déterminer
+    blessures sont les plus fréquents. Premièrement, nous allons déterminer quel 
+    siège du corps est le plus touché. Ensuite, nous allons déterminer
     quels genres d'accidents sont les plus fréquents. Finalement, nous allons
     déterminer quelles natures de la lésion sont les plus fréquentes.
   </p>
