--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -68,7 +68,7 @@
     déterminer quels groupes de travailleurs sont plus à risque, nous allons
     donc analyser certaines informations des données pouvant nous aider à
     déterminer le profil d'un travailleur à risque. Premièrement, nous allons
-    déterminer quels domaines professionnels subissent une tendance à la hausse. 
+    déterminer quels domaines professionnels subissent une tendance à la hausse.
     Par la suite, nous allons déterminer quel groupe d'âge est le plus affecté.
     Enfin, nous allons déterminer la répartition entre hommes et femmes.
   </p>
@@ -119,9 +119,9 @@
     mettre en place pour diminuer le nombre de lésions professionnelles. Pour
     effectuer cette analyse, nous allons donc analyser certaines informations
     des données pouvant nous aider à déterminer quels accidents et quelles
-    blessures sont les plus fréquents. Premièrement, nous allons déterminer quel 
-    siège du corps est le plus touché. Ensuite, nous allons déterminer
-    quels genres d'accidents sont les plus fréquents. Finalement, nous allons
+    blessures sont les plus fréquents. Premièrement, nous allons déterminer quel
+    siège du corps est le plus touché. Ensuite, nous allons déterminer quels
+    genres d'accidents sont les plus fréquents. Finalement, nous allons
     déterminer quelles natures de la lésion sont les plus fréquentes.
   </p>
 
@@ -206,7 +206,31 @@
     Pendant la période 2020-2023, une baisse du pourcentage de lésions a été
     observée pour les incidents liés au 'frappé, coincé ou écrasé par un objet
     ou de l'équipement' ainsi qu'aux 'chutes de même niveau'. En revanche, les
-    lésions liées à l'exposition au bruit ont légèrement augmenté par rapport
-    aux données enregistrées avant la mise en place des actions.
+    lésions liées aux autres risques ont stagnées, ou même augmentées, par
+    rapport aux données enregistrées avant la mise en place des actions.
   </p>
+
+  <hr />
+  <div class="method">
+    <h3>Méthodologie & Références</h3>
+    <div>
+      Les informations relatives à la description de la lésion (sexe, âge,
+      secteur d'activité, nature de la lésion, siège de la lésion, genre
+      d'accident ou d'exposition, agent causal, etc.) reflètent les données
+      consignées dans les systèmes informatiques de la CNESST au 1er mars
+      suivant l'année de référence, mais certaines d'entre elles ont été
+      adaptées à nos besoins.
+    </div>
+    <p><strong>Lien vers les données et ressources :</strong></p>
+    <a
+      href="https://www.donneesquebec.ca/recherche/dataset/lesions-professionnelles"
+      >Jeu de données sur les lésions professionnelles</a
+    >
+    <a
+      href="https://www.donneesquebec.ca/recherche/dataset/lesions-professionnelles/resource/8b1c1105-2d9c-4b5a-9865-19faef905b5f"
+      >Fiche de métadonnées lésions professionnelles - Informations pertinentes
+      à la compréhension du jeu de données (description des variables et des
+      valeurs)</a
+    >
+  </div>
 </div>
