--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -85,3 +85,31 @@ a {
   justify-content: space-between;
   width: 14rem;
 }
+
+.method a {
+  background-color: transparent;
+  text-decoration: underline;
+  padding: 0;
+  margin: 0;
+}
+
+.method {
+  display: flex;
+  align-items: start;
+  flex-direction: column;
+  margin-bottom: 5rem;
+  gap: 5px;
+}
+
+.method p strong {
+  color: #000;
+}
+
+hr {
+  border-top: 1px solid #07003252;
+  margin-top: 4rem;
+}
+
+h3 {
+  margin-top: 4rem;
+}
