MS: renommer viz2 en bar-chart

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -127,7 +127,7 @@
 
   <h3>Quel siège du corps est le plus touché ?</h3>
   <div class="viz">
-    <app-viz2></app-viz2>
+    <app-bar-chart></app-bar-chart>
   </div>
   <p>
     Le système corporel (c'est-à-dire l'ensemble d'un système, sans qu'il y ait
